--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "license": "Apache License v2.0",
   "bugs": {
     "url": "https://github.com/dar5hak/ishtyle/issues"
+  },
+  "devDependencies": {
+    "gulp-styl": "~1.0.3",
+    "gulp": "~3.8.11",
+    "gulp-stylint": "~1.1.2"
   }
 }
