--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "stylus",
     "style",
     "sheet",
-    "markdown"
+    "markdown",
+    "document"
   ],
   "author": "Darshak Parikh",
-  "license": "Apache License v2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/dar5hak/ishtyle/issues"
   },
